--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <link rel="stylesheet" href="https://bootswatch.com/5/minty/bootstrap.min.css">
+        <link rel="stylesheet" href="{{asset('css/main.css')}}">
         {% block stylesheets %}
         {% endblock %}
 
@@ -11,7 +12,84 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
-    <body>
+    <body >
+        <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{{path('food_list')}}">Foody food picker</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarColor02">
+                    <ul class="navbar-nav me-auto">
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Food
+                            </a>
+                            <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdown">
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark px-2" href="{{path('food_list')}}">
+                                        Food list
+                                    </a>
+                                </li>
+                            
+                                {% if is_granted('ROLE_ADMIN') %}
+                                    <li><hr class="dropdown-divider bg-primary"></li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark px-2" href="{{path('admin_food')}}">
+                                            Admin
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                        </li>    
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Food categories
+                            </a>
+                            <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdown2">
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark px-2" href="{{path('types_list')}}">
+                                        Categories list
+                                    </a>
+                                </li>
+                            
+                                {% if is_granted('ROLE_ADMIN') %}
+                                    <li><hr class="dropdown-divider bg-primary"></li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark px-2" href="{{path('admin_types')}}">
+                                            Categories administration
+                                        </a>
+                                    </li>
+                                {% endif %}
+
+                            </ul>
+                        </li>                  
+                        {% if not app.user %}              
+                            <li class="nav-item">
+                                    <a class="nav-link px-2" href="{{path('registration')}}">
+                                            Sign-up
+                                    </a>
+                            </li>
+                            <li class="nav-item">
+                                    <a class="nav-link px-2" href="{{path('login')}}">
+                                            Login
+                                    </a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                    <a class="nav-link px-2" href="{{path('logout')}}">
+                                            Logout
+                                    </a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <h1 class="border border-dark bg-dark rounded p-2 m-2 text-white">{% block myTitle %}{% endblock %}</h1>
         {% block body %}{% endblock %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  
     </body>
 </html>
